Fixed spacing and line heights for HackingEDU header

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -235,7 +235,7 @@ body {
     height: 8em !important;
   }
   .main-txt {
-    font-size: 2.3em
+    font-size: 2.1em;
   }
   .arrow-wrap {
     width: 40px !important;
@@ -247,7 +247,7 @@ body {
     margin-top: 15px !important;
   }
   .sub-text {
-    font-size: 14pt
+    font-size: 1.2em;
   }
 }
 
@@ -523,6 +523,7 @@ a.san-mateo:hover{
 }
 
 .bold{
+  line-height: 1;
   font-size: 1.9em;
 }
 
